Remove database and admin from config

--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,14 +1,15 @@
 version: "3"
 services:
-  database:
-    image: postgres:12
-    container_name: ppoker-db
-    environment:
-      POSTGRES_DB: ppoker
-      POSTGRES_USER: ppoker
-      POSTGRES_PASSWORD: ppoker
-    ports:
-      - "5432:5432"
+# TODO : Removed postgres for now - make it simple
+#  database:
+#    image: postgres:12
+#    container_name: ppoker-db
+#    environment:
+#      POSTGRES_DB: ppoker
+#      POSTGRES_USER: ppoker
+#      POSTGRES_PASSWORD: ppoker
+#    ports:
+#      - "5432:5432"
   redis:
     image: redis:6
     container_name: ppoker-redis
