--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -10,6 +10,7 @@ daphne = "==3.0.2"
 dynaconf = "==3.1.7"
 psycopg2-binary = "==2.9.1"
 whitenoise = "==5.3.0"
+pydantic = "==1.8.2"
 
 [dev-packages]
 
